fix click hint z-index problem in night mode

--- a/_custom/css/style.css
+++ b/_custom/css/style.css
@@ -1294,6 +1294,7 @@ a {
 .ftPulsingHint.is-visible {
   opacity: 1;
   visibility: visible;
+  z-index: 10;
 }
 
 .ftPulsingHint.is-visible::before {
